[GCM] Fixing the client interval interaction with heartbeat ack

This patch fixes the case, where heartbeat interval is lowered to
1 minute after a heartbeat is initiated by the gcm client.

It also handles the case, where custom interval was set to a higher
value, but because of no reconnection, we are keeping the lowest
known value. (Caught by existing unit test).

BUG=591490
R=zea@chromium.org

Review URL: https://codereview.chromium.org/1758573004

Cr-Commit-Position: refs/heads/master@{#379095}

Former-commit-id: a565abf9111511c13ebd0809656e12323956a4b2